--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "real-time"
   ],
   "author": "Matthieu Nicolas",
-  "license": "GPL"
+  "licenses": [***REMOVED***
+      "type": "GPLv3",
+      "url": "http://www.gnu.org/licenses/gpl-3.0.txt"
+  ***REMOVED***]
 ***REMOVED***
