--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "mute-server": "*",
     "socket.io": "0.9.16"
   ***REMOVED***,
+  "repository": ***REMOVED***
+    "type": "git",
+    "url": "https://github.com/MatthieuNICOLAS/mute-demo"
+  ***REMOVED***,
   "devDependencies": ***REMOVED******REMOVED***,
   "scripts": ***REMOVED***
     "test": "echo \"Error: no test specified\" && exit 1"
