--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "mute-server": "*",
     "socket.io": "0.9.16"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MatthieuNICOLAS/mute-demo"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
