--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "ejs": "1.0.0",
     "express": "4.3.0",
     "mute-server": "*",
-    "socket.io": "0.9.16"
+    "socket.io": "0.9.16",
+    "body-parser": "1.2.2",
+    "cookie-parser": "1.1.0",
+    "cookie-session": "1.0.2"
   ***REMOVED***,
   "repository": ***REMOVED***
     "type": "git",
