--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "app.js",
   "dependencies": ***REMOVED***
+    "body-parser": "1.2.2",
+    "cookie-parser": "1.1.0",
+    "cookie-session": "1.0.2",
     "ejs": "1.0.0",
     "express": "4.3.0",
     "mute-server": "*",
-    "socket.io": "0.9.16",
-    "body-parser": "1.2.2",
-    "cookie-parser": "1.1.0",
-    "cookie-session": "1.0.2"
+    "nodemailer": "^0.6.5",
+    "socket.io": "0.9.16"
   ***REMOVED***,
   "repository": ***REMOVED***
     "type": "git",
@@ -26,8 +27,10 @@
     "real-time"
   ],
   "author": "Matthieu Nicolas",
-  "licenses": [***REMOVED***
+  "licenses": [
+    ***REMOVED***
       "type": "GPLv3",
       "url": "http://www.gnu.org/licenses/gpl-3.0.txt"
-  ***REMOVED***]
+***REMOVED***
+  ]
 ***REMOVED***
