--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "cookie-parser": "1.1.0",
     "cookie-session": "1.0.2",
     "ejs": "1.0.0",
-    "express": "4.3.0",
+    "express": "4.0.0",
     "mute-server": "*",
-    "nodemailer": "^0.6.5",
+    "nodemailer": "0.6.5",
     "socket.io": "0.9.16"
   },
   "repository": {
