--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ mute.conf
 
 assets/js/ace
 assets/js/mute-client
+assets/js/zeroclipboard
 
 # Dependency directory
 # Commenting this out is preferred by some people, see
