Debug default document's creation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mute-demo",
-  "version": "0.0.1",
+  "name": "mute",
+  "version": "0.0.2",
   "description": "",
   "main": "app.js",
   "dependencies": {
