--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcryptjs": "^1.0.1",
     "body-parser": "1.2.2",
     "cookie-parser": "1.1.0",
     "cookie-session": "1.0.2",
     "ejs": "1.0.0",
     "express": "4.0.0",
+    "mongoose": "^3.8.12",
     "mute-server": "*",
     "nodemailer": "0.6.5",
     "serve-favicon": "^2.0.1",
