--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 ***REMOVED***
   "name": "mute-demo",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "app.js",
   "dependencies": ***REMOVED***
     "bcryptjs": "^1.0.1",
     "body-parser": "1.2.2",
+    "connect-cache-manifest": "0.2.0",
     "cookie-parser": "1.1.0",
     "cookie-session": "1.0.2",
     "ejs": "1.0.0",
     "express": "4.0.0",
-    "mongoose": "^3.8.12",
+    "mongoose": "3.8.12",
     "mute-server": "*",
     "nodemailer": "0.6.5",
-    "serve-favicon": "^2.0.1",
+    "serve-favicon": "2.0.1",
     "socket.io": "0.9.16"
   ***REMOVED***,
   "repository": ***REMOVED***
