Add the warning notification when the user opens a doc twice

--- a/mute.conf
+++ b/mute.conf
@@ -1,11 +1,11 @@
 {
     "mail": {
-    	"username": "matthieu.nicolas@telecomnancy.net",
-    	"pass": "88Omn3s00"
+    	"username": "username",
+    	"pass": "pass"
     },
     "db": {
     	"name": "mute",
-    	"username": "admin",
-    	"pass": "4xsAYMPKErsP"
+    	"username": "username",
+    	"pass": "pass"
     }
 }
