Add the warning notification when the user opens a doc twice

--- a/mute.conf
+++ b/mute.conf
@@ -1,11 +1,11 @@
 ***REMOVED***
     "mail": ***REMOVED***
-***REMOVED***
-***REMOVED***
+    	"username": "username",
+    	"pass": "pass"
 ***REMOVED***
     "db": ***REMOVED***
 ***REMOVED***
-***REMOVED***
-***REMOVED***
+    	"username": "username",
+    	"pass": "pass"
 ***REMOVED***
 ***REMOVED***
