--- a/mute.conf
+++ b/mute.conf
@@ -1,11 +1,11 @@
 ***REMOVED***
     "mail": ***REMOVED***
-    	"username": "username",
-    	"pass": "pass"
+***REMOVED***
+***REMOVED***
 ***REMOVED***
     "db": ***REMOVED***
 ***REMOVED***
-    	"username": "username",
-    	"pass": "pass"
+***REMOVED***
+***REMOVED***
 ***REMOVED***
 ***REMOVED***
