Update mute-client submodule

--- a/mute.conf
+++ b/mute.conf
@@ -1,11 +1,11 @@
-***REMOVED***
-    "mail": ***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-    "db": ***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
+{
+    "mail": {
+    	"username": "***REMOVED***",
+    	"pass": "***REMOVED***"
+    },
+    "db": {
+    	"name": "mute",
+    	"username": "***REMOVED***",
+    	"pass": "***REMOVED***"
+    }
+}
