Remove credentials from config file

--- a/mute.conf
+++ b/mute.conf
@@ -1,11 +1,11 @@
 {
     "mail": {
-    	"username": "***REMOVED***",
-    	"pass": "***REMOVED***"
+    	"username": "username",
+    	"pass": "pass"
     },
     "db": {
-    	"name": "mute",
-    	"username": "***REMOVED***",
-    	"pass": "***REMOVED***"
+    	"name": "dbName",
+    	"username": "usernmae",
+    	"pass": "pass"
     }
 }
