Try change mute.conf

--- a/mute.conf
+++ b/mute.conf
@@ -5,7 +5,7 @@
     },
     "db": {
     	"name": "dbName",
-    	"username": "usernmae",
+    	"username": "username",
     	"pass": "pass"
     }
 }
