Let MUTE be able to run with different clients

--- a/mute.conf
+++ b/mute.conf
@@ -1,11 +1,11 @@
 {
     "mail": {
-    	"username": "username",
-    	"pass": "pass"
+    	"username": "score.test.inria.001",
+    	"pass": "scoreINRIA"
     },
     "db": {
-    	"name": "dbName",
-    	"username": "username",
-    	"pass": "pass"
+    	"name": "mute",
+    	"username": "mute",
+    	"pass": "mute"
     }
 }
