First integration of webrtc network prototype

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "assets/js/mute-client"]
 	path = assets/js/mute-client
-	url = https://github.com/MatthieuNICOLAS/mute-client.git
+	url = https://github.com/quentinl-c/mute-client.git
 [submodule "assets/js/zeroclipboard"]
 	path = assets/js/zeroclipboard
 	url = https://github.com/zeroclipboard/zeroclipboard.git
@@ -10,3 +10,6 @@
 [submodule "assets/js/ace"]
 	path = assets/js/ace
 	url = https://github.com/ajaxorg/ace-builds.git
+[submodule "node_modules/mute-server"]
+	path = node_modules/mute-server
+	url = https://github.com/quentinl-c/mute-server.git
