--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "cookie-session": "1.0.2",
     "ejs": "1.0.0",
     "express": "4.0.0",
-    "mongoose": "3.8.12",
-    "mute-server": "0.1.6",
+    "mongoose": "*",
     "nodemailer": "0.6.5",
     "serve-favicon": "2.0.1",
     "socket.io": "0.9.16"
