--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "mongoose": "*",
     "nodemailer": "0.6.5",
     "serve-favicon": "2.0.1",
-    "socket.io": "1.3.6"
-  },
+    "socket.io": "1.3.6",
+    "peer" : "*"  
+},
   "repository": {
     "type": "git",
     "url": "https://github.com/MatthieuNICOLAS/mute-demo"
