--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "cookie-session": "1.0.2",
     "ejs": "1.0.0",
     "express": "4.13.1",
-    "mongoose": "*",
+    "mongoose": "4.1.x",
     "nodemailer": "0.6.5",
     "serve-favicon": "2.0.1",
     "socket.io": "1.3.6",
-    "peer" : "*"  
+    "peer" : "*"
 },
   "repository": {
     "type": "git",
