--- a/.gitmodules
+++ b/.gitmodules
@@ -7,11 +7,11 @@
 [submodule "assets/js/ace"]
 	path = assets/js/ace
 	url = https://github.com/ajaxorg/ace-builds.git
-[submodule "mute-server"]
-	path = node_modules/mute-server
-	url = https://github.com/coast-team/mute-server.git
-	branch = netflux
 [submodule "assets/js/mute-client"]
 	path = assets/js/mute-client
 	url = https://github.com/coast-team/mute-client.git
+	branch = netflux
+[submodule "node_modules/mute-server"]
+	path = node_modules/mute-server
+	url = https://github.com/coast-team/mute-server.git
 	branch = netflux
