--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "express": "4.13.1",
     "mongoose": "4.1.x",
     "nodemailer": "0.6.5",
+    "peer": "*",
     "serve-favicon": "2.0.1",
-    "socket.io": "1.3.6",
-    "peer" : "*"
-},
+    "sigver": "^7.0.0",
+    "socket.io": "1.3.6"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/MatthieuNICOLAS/mute-demo"
@@ -31,10 +32,8 @@
     "real-time"
   ],
   "author": "Matthieu Nicolas",
-  "licenses": [
-    {
-      "type": "GPLv3",
-      "url": "http://www.gnu.org/licenses/gpl-3.0.txt"
-    }
-  ]
+  "licenses": [{
+    "type": "GPLv3",
+    "url": "http://www.gnu.org/licenses/gpl-3.0.txt"
+  }]
 }
