simplify MUTE install

--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "nodemailer": "0.6.5",
     "serve-favicon": "2.0.1",
     "socket.io": "1.3.6",
-    "peer" : "*"
-},
+    "peer": "*"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/MatthieuNICOLAS/mute-demo"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "git submodule init & git submodule update",
+    "postinstall": "npm install assets/js/mute-client & npm install node_modules/mute-server"
   },
   "keywords": [
     "crdt",
@@ -31,10 +33,8 @@
     "real-time"
   ],
   "author": "Matthieu Nicolas",
-  "licenses": [
-    {
-      "type": "GPLv3",
-      "url": "http://www.gnu.org/licenses/gpl-3.0.txt"
-    }
-  ]
+  "licenses": [{
+    "type": "GPLv3",
+    "url": "http://www.gnu.org/licenses/gpl-3.0.txt"
+  }]
 }
