--- a/mute.conf
+++ b/mute.conf
@@ -5,7 +5,7 @@
     },
     "db": {
     	"name": "mute",
-    	"username": "mute",
-    	"pass": "mute"
+    	"username": "",
+    	"pass": ""
     }
 }
