--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "git submodule init & git submodule update",
+    "preinstall": "git submodule init && git submodule update",
     "postinstall": "npm install assets/js/mute-client & npm install node_modules/mute-server"
   },
   "keywords": [
